decimate (collapse) bad results #37121

Closed
opened 2013-10-17 09:36:57 +02:00 by Daniel Grauer · 8 comments
Member

%%%--- Operating System, Graphics card ---
os: windows 7 64bit
gpu: nvidia quadro k4000

- Blender version with error, and version that worked ---

error: r60797
working: dont know

- Short description of error ---

the decimate modifier creates some really nasty results with the collapse method. one would expect some behavior like the remove doubles function does so the mesh output is "usable"
see screenshot for comparison of the 2

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. open blend file
  2. select the object named "decimate"
  3. play with the decimate modifier
  4. notice the result is a mess

%%%

%%%--- Operating System, Graphics card --- os: windows 7 64bit gpu: nvidia quadro k4000 - Blender version with error, and version that worked --- error: r60797 working: dont know - Short description of error --- the decimate modifier creates some really nasty results with the collapse method. one would expect some behavior like the remove doubles function does so the mesh output is "usable" see screenshot for comparison of the 2 - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. open blend file 2. select the object named "decimate" 3. play with the decimate modifier 4. notice the result is a mess %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%That's probably because the decimate is trying to preserve the exact shape of the original model while lowering the vertice count.
While the model you obtain from remove double and increasing the merge distance does not look anymore at all like the original model (it has lost all its hard egdes as you can see and look smooth)

To see what i mean, take your original model, go to edit mode, select it all and click a dozen of time on the "Smooth Vertex" button, so your model lose its hard edges and become smoother.
Now use the decimate collapse and notice how the faces will now look more similar to what a remove double would do, because the model is smooth and the decimate does not have to preserve the hard edge look anymore.
%%%

%%%That's probably because the decimate is trying to preserve the exact shape of the original model while lowering the vertice count. While the model you obtain from remove double and increasing the merge distance does not look anymore at all like the original model (it has lost all its hard egdes as you can see and look smooth) To see what i mean, take your original model, go to edit mode, select it all and click a dozen of time on the "Smooth Vertex" button, so your model lose its hard edges and become smoother. Now use the decimate collapse and notice how the faces will now look more similar to what a remove double would do, because the model is smooth and the decimate does not have to preserve the hard edge look anymore. %%%
Author
Member

%%%well i see what you are talking about but in a lot of scenarios a smoothing will change the mesh more than a uniform decimation would.
also the mesh slivers are a most undesired result where probably almost all artists would prefer a slight surface difference to bad triangulation.%%%

%%%well i see what you are talking about but in a lot of scenarios a smoothing will change the mesh more than a uniform decimation would. also the mesh slivers are a most undesired result where probably almost all artists would prefer a slight surface difference to bad triangulation.%%%

This issue was referenced by blender/blender-addons-contrib@3f5b59cd90

This issue was referenced by blender/blender-addons-contrib@3f5b59cd90c961d9737e7dbf8999c5030b7ccadf

This issue was referenced by 3f5b59cd90

This issue was referenced by 3f5b59cd90c961d9737e7dbf8999c5030b7ccadf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3f5b59cd90.

Closed by commit 3f5b59cd90.

Note, this still gives skinny faces - but its not over-collapsing some areas while ignoring others anymore.

Note, this still gives skinny faces - but its not over-collapsing some areas while ignoring others anymore.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37121
No description provided.