Fix T37121: decimate works badly with flat surfaces